--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
           <h5 class="white-text">Componentes</h5>
           <ul>
             <li><a class="white-text" href="#!">Lucas Ricoy</a></li>
-            <li><a class="white-text" href="#!">Davidson</a></li>
+            <li><a class="white-text" href="#!">Davidson (que não responde chamada)</a></li>
             <li><a class="white-text" href="#!">Renato Lopes</a></li>
             <li><a class="white-text" href="#!">Luiz Henrique</a></li>
           </ul>
